UpdatedScannerClass